# RogueGame

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  RogueGame.cbp  build.bat  build.py  cmake_install.cmake  project.4coder
assets/models/Knight/: Base.stl  Chest_Armor.stl  Feathers.stl  Head.stl  Lower_Body.stl  Right_Arm.stl
assets/models/Terrain/: PBOX22_Grass_01.FBX
assets/scene/main/: 0.e  1.e  2.e  4294967295.e  main.manifest
assets/shaders/: common.sh  shaderlib.sh
assets/shaders/bump/: fs_bump.sc  varying.def.sc  vs_bump.sc
src/: main.cpp
src/app/: Application.cpp  Application.hpp  ImGuiStyles.h  bigg_imgui.hpp
src/assets/: AssetUtils.cpp  AssetUtils.h  Assets.cpp  Assets.h  json.h  tinyfiledialogs.cpp  tinyfiledialogs.h
src/dev/: Logger.cpp  Logger.h
src/editor/: Editor.cpp  Editor.h  FileViewer.cpp  FileViewer.h  ImGuiUtils.h  Logger.cpp  Logger.h  SceneWindow.cpp  SceneWindow.h
src/entity/: Entities.cpp  Entities.h  Generated.cpp  Generated.h  MeshRenderer.h  Scene.cpp  Scene.h  Transform.h
src/filesystem/: FileIO.h
src/input/: Input.cpp  Input.h
src/math/: Math.h
src/physics/: Collision.cpp  Collision.h  Physics.cpp  Physics.h  Time.cpp  Time.h
src/rendering/: Renderer.cpp  Renderer.h
src/scene/: Scene.h
src/utils/: ImGuiUtils.h  JsonExtensions.h  MapUtils.h  StringUtils.h  Utils.h
